Update src/main/java/edu/phystech/hw2/contact/Contact.java
Co-authored-by: Aleksey Kononov <ll-esha@yandex.ru>